--- a/src/shared/grid/component/grid/grid.component.html
+++ b/src/shared/grid/component/grid/grid.component.html
@@ -14,8 +14,8 @@
         [scrollWindow]="false"
         (scrolled)="onScroll($event)"
 >
-    <figure *ngFor="let movie of gridData.list() | async" class="w-full duration-500 hover:scale-105 ease-in
-    transition-transform transform cursor-pointer flex flex-col justify-between">
+    <figure *ngFor="let movie of gridData.list() | async" class="w-full duration-200 hover:scale-105 ease-in
+    transition-all rounded-md hover:shadow-md transform cursor-pointer flex flex-col justify-between">
         <img [src]="movie.posterUrl" draggable="false" (error)="imageNotFound(movie)" class="
             rounded-md w-full select-none" [alt]="movie.title">
         <figcaption>
