--- a/src/shared/grid/component/grid/grid.component.html
+++ b/src/shared/grid/component/grid/grid.component.html
@@ -1,8 +1,8 @@
 <div 
     class="container
         h-full
-        overflow-auto
         overflow-x-hidden
+        overflow-y-auto
         gap-6 mx-auto
         grid grid-cols-1
         sm:grid-cols-3
