--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,27 @@
-<router-outlet></router-outlet>
+<mat-toolbar color="primary" class="">
+    <button mat-icon-button (click)="snav.toggle()">
+        <mat-icon>
+            menu
+        </mat-icon>
+    </button>
+    <h1>Movie Portal</h1>
+</mat-toolbar>
+<mat-sidenav-container>
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+        [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+        <mat-nav-list>
+            <a mat-list-item routerLink="/">
+                Dashboard
+            </a>
+            <a mat-list-item routerLink="/favorite">
+                Favorites
+            </a>
+            <a mat-list-item routerLink="/later">
+                Watch Later
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
