add icon to sidebar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 :host {
     mat-sidenav-container {
         height: calc(100% - 64px);
+
+        mat-sidenav {
+            width: 200px;
+        }
     }
 
     mat-sidenav-content {
