--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,16 +7,18 @@
     <h1>Movie Portal</h1>
 </mat-toolbar>
 <mat-sidenav-container>
-    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-        [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+    <mat-sidenav #snav mode="over">
         <mat-nav-list>
             <a mat-list-item routerLink="/">
+                <mat-icon class="mr-2">grid_view</mat-icon>
                 Dashboard
             </a>
             <a mat-list-item routerLink="/favorite">
+                <mat-icon class="mr-2">star_border</mat-icon>
                 Favorites
             </a>
             <a mat-list-item routerLink="/later">
+                <mat-icon class="mr-2">bookmark_border</mat-icon>
                 Watch Later
             </a>
         </mat-nav-list>
