--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@
         ::ng-deep {
             ng-component {
                 height: 100%;
-                display: block;
+                display: flex;
             }
         }
     }
