--- a/src/shared/grid/component/grid/grid.component.html
+++ b/src/shared/grid/component/grid/grid.component.html
@@ -14,21 +14,5 @@
         [scrollWindow]="false"
         (scrolled)="onScroll($event)"
 >
-    <figure *ngFor="let movie of gridData.list() | async" class="w-full duration-200 hover:scale-105 ease-in
-    transition-all rounded-md hover:shadow-md transform cursor-pointer flex flex-col justify-between">
-        <img [src]="movie.posterUrl" draggable="false" (error)="imageNotFound(movie)" class="
-            rounded-md w-full select-none" [alt]="movie.title">
-        <figcaption>
-            <table class="w-full">
-                <tr>
-                    <td class="w-1/4 text-sm font-bold">Title</td>
-                    <td class="overflow-ellipsis whitespace-nowrap overflow-hidden">{{movie.title}}</td>
-                </tr>
-                <tr>
-                    <td class="text-sm">Year</td>
-                    <td>{{movie.year}}</td>
-                </tr>
-            </table>
-        </figcaption>
-    </figure>
+    <bit-thumbnail *ngFor="let movie of gridData.list() | async" [movie]="movie"></bit-thumbnail>
 </div>
