added search to dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<mat-toolbar color="primary" class="">
+<mat-toolbar color="primary" class="flex flex-row items-center">
     <button mat-icon-button (click)="snav.toggle()">
         <mat-icon>
             menu
         </mat-icon>
     </button>
     <h1>Movie Portal</h1>
+
+    <input type="text" class="h-10 ml-4 pl-2 text-gray-700 appearance-none outline-none rounded-md"
+        placeholder="Search..." [formControl]="search">
 </mat-toolbar>
 <mat-sidenav-container>
     <mat-sidenav #snav mode="over">
