--- a/src/app/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/dashboard/component/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
 <bit-grid
+    [keyword]="keyword$"
 ></bit-grid>
 <bit-carousel class="container mx-auto mt-4" [movieList]="(movieList$ | async)"></bit-carousel>
