--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     </button>
     <h1>Movie Portal</h1>
 
-    <input type="text" class="h-10 ml-4 pl-2 text-gray-700 appearance-none outline-none rounded-md"
+    <input type="text" class="h-10 ml-4 pl-2 w-2/5 sm:w-60 text-gray-700 appearance-none outline-none rounded-md"
         placeholder="Search..." [formControl]="search">
 </mat-toolbar>
 <mat-sidenav-container>
