--- a/src/app/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/dashboard/component/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
+<bit-carousel class="container mx-auto" [movieList]="(movieList$ | async)"></bit-carousel>
 <bit-grid
     [movieList]="allMovieList$ | async"
     #grid
 ></bit-grid>
-<bit-carousel class="container mx-auto mt-4" [movieList]="(movieList$ | async)"></bit-carousel>
