--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,11 @@
 :host {
 
+    mat-toolbar {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+    }
+
     mat-sidenav-container {
         mat-sidenav {
             width: 200px;
