--- a/src/shared/grid/component/grid/grid.component.html
+++ b/src/shared/grid/component/grid/grid.component.html
@@ -26,7 +26,7 @@
         (scrolled)="onScroll($event)"
 >
     <bit-thumbnail 
-        *ngFor="let movie of movieList"
+        *ngFor="let movie of movieList; trackBy: trackByFn"
         [movie]="movie"
     ></bit-thumbnail>
 </div>
