--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <input type="text" class="h-10 ml-4 pl-2 w-2/5 sm:w-60 text-gray-700 appearance-none outline-none rounded-md"
         placeholder="Search..." [formControl]="search">
 </mat-toolbar>
-<mat-sidenav-container>
+<mat-sidenav-container class="grow">
     <mat-sidenav #snav mode="over">
         <mat-nav-list>
             <a mat-list-item routerLink="/" (click)="snav.toggle()" routerLinkActive="bg-gray-200">
