--- a/src/app/later/component/later/later.component.html
+++ b/src/app/later/component/later/later.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto mt-10">
-    <bit-grid
+    <bit-grid #grid
         [movieList]="gridData$ | async"
     ></bit-grid>
 </div>
