--- a/src/shared/grid/component/grid/grid.component.html
+++ b/src/shared/grid/component/grid/grid.component.html
@@ -1,4 +1,4 @@
-<button mat-button color="primary" [matMenuTriggerFor]="menu" class="self-start" aria-label="thumbnail menu">
+<button mat-flat-button color="primary" [matMenuTriggerFor]="menu" class="self-start" aria-label="thumbnail menu">
     {{ genreText || 'Select Genre' }}
 </button>
 <mat-menu #menu="matMenu">
