--- a/src/app/dashboard/component/dashboard/dashboard.component.html
+++ b/src/app/dashboard/component/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<bit-carousel class="container mx-auto" [movieList]="(movieList$ | async)"></bit-carousel>
-<bit-grid
+<bit-carousel class="container mx-auto mt-2" [movieList]="(movieList$ | async)"></bit-carousel>
+<bit-grid class="container mx-auto mt-2"
     [movieList]="allMovieList$ | async"
     #grid
 ></bit-grid>
