--- a/src/shared/grid/component/thumbnail/thumbnail.component.html
+++ b/src/shared/grid/component/thumbnail/thumbnail.component.html
@@ -16,7 +16,7 @@
         <button mat-icon-button [matMenuTriggerFor]="menu" class="self-start" aria-label="thumbnail menu">
             <mat-icon>more_vert</mat-icon>
         </button>
-        <mat-menu #menu="matMenu">
+        <mat-menu #menu="matMenu" class="w-48">
             <button (click)="toggleLater($event)" mat-menu-item>
                 <span [class.hidden]="!movie.isLater">
                     <mat-icon>bookmark</mat-icon>
