image loading effect

--- a/src/shared/carousel/component/carousel/carousel.component.html
+++ b/src/shared/carousel/component/carousel/carousel.component.html
@@ -7,8 +7,7 @@
     >
     <div class="card-list_card"
         *ngFor="let movie of infinitScroll.itemsChange | async; trackBy: trackByFn">
-        <div class="card-list_card_core fadeIn rounded-md" [style.backgroundImage]="getImageUrl(movie)">
-        </div>
-        <p class="card-list_card_title">{{movie.title}}</p>
+        <img class="card-list_card_core fadeIn rounded-md" imageLoading [src]="movie.posterUrl">
+        <p class="card-list_card_title">{{ movie.title }}</p>
     </div>
 </div>
