changed style to increase performance

--- a/src/shared/carousel/component/carousel/carousel.component.scss
+++ b/src/shared/carousel/component/carousel/carousel.component.scss
@@ -3,6 +3,7 @@
         $card-width: 162px;
         display: flex;
         overflow: hidden;
+        height: 270px;
         
         &_card {
             width: $card-width;
