--- a/src/shared/grid/component/grid/grid.component.html
+++ b/src/shared/grid/component/grid/grid.component.html
@@ -21,7 +21,8 @@
         {{ decade | decade }}
     </button>
 </mat-menu>
-<div 
+<div
+    id="thumbnail-list"
     class="container
         h-full
         overflow-x-hidden
